edit custom stylesheets for JLA and consillience to fix layout issue with cover images OJS-317

--- a/assets/custom-stylesheets/stylesheets/consilience-custom-styles.css
+++ b/assets/custom-stylesheets/stylesheets/consilience-custom-styles.css
@@ -1,5 +1,20 @@
 /* Consilience Custom Styles */
 
+/* fix layout issue OJS-317 */
+
+@media (min-width: 1200px) {
+  .issue-only-image {
+      margin-top: auto;
+  }
+}
+
+.homepage-announcements {
+  background: #fff;
+  margin-bottom: 65px;
+}
+
+/* main styles */
+
 body {
   font-family: "pt serif";
   font-size: 18px;
