--- a/assets/custom-stylesheets/stylesheets/jla-custom-styles.css
+++ b/assets/custom-stylesheets/stylesheets/jla-custom-styles.css
@@ -1,5 +1,13 @@
 /* JLA Custom Styles */
 
+/* fix layout issue OJS-317 */
+
+@media (min-width: 1200px) {
+  .issue-only-image {
+      margin-top: auto;
+  }
+}
+
 /* fonts */
 
 body,
